
Discipline:
- Affichage par tranches des incidents à traiter (pour limiter le temps de chargement de la page).
- Possibilité d'imprimer des fichiers OOo pour les sanctions  de type travail et autre.
- Possibilité de modifier les termes 'incident' et 'sanction'.
- Possibilité de saisir certaines sanctions en tant que professeur (liste à préciser dans Définir les sanctions).

Modèles Ooo:
- Possibilité de gérer des modèles OOo en compte scolarité ou cpe.

Gestion:
- Ajout de la date d'entrée d'un élève dans l'établissement.
- Possibilité de choisir l'adresse mail destinataire de l'information comme quoi un changement d'adresse mail responsable ou élèev a eu lieu.
- Possibilité d'ajouter un préfixe au sujet des mails envoyés par Gepi.
- Possibilité de donner l'accès à l'impression de leur Fiche Bienvenue pour les différents statuts depuis la page Gérer mon compte.
- Possibilité de définir des messages d'information à faire apparaître dans 'Gérer mon compte' (messages éventuellement différents pour chaque statut).
- Possibilité d'accéder à la date de dernière connexion d'élèves/responsables.
- Possibilité de donner l'accès aux statistiques, voire aux détails de connexion pour les comptes scolarité, cpe, professeurs principaux et/ou professeurs.
- Possibilité de choisir le professeur principal depuis la page d'index Élèves.

Divers:
- Ajout d'une page pour que les parents puissent contrôler les informations élève/resp.

Gepi-1.6.3 (17/06/2013)
===========================
Bulletins:
- Possibilité de choisir ce que l'on souhaite faire apparaitre sur les bulletins
  en ce qui concerne les absences (total, absences non-justifiées et/ou retards).
- Possibilité de corriger des notes de bulletins en période partiellement close.
- PDF: Ajout d'un ordre d'affichage des colonnes avec appréciation en premier.
- Possibilité d'afficher la moyenne annuelle des enseignements sur les bulletins PDF.