@@ -35,6 +35,8 @@ Discipline:
 - Possibilité d'imprimer des fichiers OOo pour les sanctions  de type travail et autre.
 - Possibilité de modifier les termes 'incident' et 'sanction'.
 - Possibilité de saisir certaines sanctions en tant que professeur (liste à préciser dans Définir les sanctions).
+- Possibilité de restreindre dans Mon compte ce qui a été défini dans Définir les destinataires d'alertes,
+  les catégories d'incidents pour lesquelles on souhaite être averti.
 
 Modèles Ooo:
 - Possibilité de gérer des modèles OOo en compte scolarité ou cpe.
